--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,5 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install Dependencies
+      run: sudo apt install libreadline-dev
     - name: Make
       run: make
