--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y libreadline-dev
-    - name: Make
+      run: sudo apt-get update && sudo apt-get install -y libreadline-dev build-essential
+    - name: Build project
       run: make
