--- a/libft/Makefile
+++ b/libft/Makefile
@@ -31,7 +31,7 @@ SRCS = 	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strl
 		ft_strdup.c ft_strndup.c ft_calloc.c \
 		ft_split.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_striteri.c ft_strmapi.c ft_split.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
 		ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c \
-		ft_fsplit.c ft_ftab.c
+		ft_fsplit.c ft_ftab.c ft_strcut.c
 
 
 
